@@ -1,17 +1,16 @@
 requires 'perl' => '>= 5.018';
 
-requires 'Carp'         => '0';
-requires 'Data::Dumper' => '0';
-requires 'Exporter'     => '0';
-requires 'Scalar::Util' => '>= 1.14';
+requires 'Carp'                      => '0';
+requires 'Data::Dumper'              => '0';
+requires 'Exporter'                  => '0';
+requires 'DateTime::Format::RFC3339' => '0';
 
 recommends 'Types::Serialiser' => 0;
 
 on test => sub{
-  requires 'Data::Dumper'              => '0';
-  requires 'DateTime::Format::RFC3339' => '0';
-  requires 'Math::BigInt'              => '>= 1.999718';
-  requires 'TOML::Parser'              => '0';
-  requires 'Test2::V0'                 => '0';
-  requires 'Test::Pod'                 => '0';
+  requires 'Data::Dumper' => '0';
+  requires 'Math::BigInt' => '>= 1.999718';
+  requires 'TOML::Parser' => '0';
+  requires 'Test2::V0'    => '0';
+  requires 'Test::Pod'    => '0';
 };
