@@ -3,6 +3,8 @@ use warnings;
 
 use Test2::V0;
 use TOML::Tiny;
+use DateTime::Format::RFC3339;
+use DateTime::Format::ISO8601;
 
 my $src = do{ local $/; <DATA> };
 
@@ -30,7 +32,7 @@ subtest strict_arrays => sub{
   };
 };
 
-subtest oddballs => sub{
+subtest 'oddballs and regressions' => sub{
   subtest 'strings that look like numbers' => sub{
     my $parser = TOML::Tiny->new(
       inflate_integer => sub{
@@ -60,6 +62,36 @@ is_a_flt   = 4.2
     ok !ref($data->{not_a_flt}), 'strings do not inflate as floats';
     ok ref($data->{is_a_flt}) && $data->{is_a_flt}->isa('Math::BigFloat'), 'floats do inflate with inflate_float';
   };
+
+  subtest 'decode/encode datetime with floating time zone' => sub{
+    my $parser = TOML::Tiny->new(
+      inflate_datetime => sub{
+        my ($dt_string) = @_;
+        # DateTime::Format::RFC3339 will set the resulting DateTime's formatter
+        # to itself. Fallback is the DateTime default, ISO8601, with a possibly
+        # floating time zone.
+        return eval{ DateTime::Format::RFC3339->parse_datetime($dt_string) }
+            || DateTime::Format::ISO8601->parse_datetime($dt_string);
+      },
+    );
+
+    # Parse 2 dates, one with and one without a time zone. Re-encode as TOML
+    # and verify that the resulting datetime values are as expected.
+    my $with_tz_str = '2020-05-04T16:37:02.905408062+01:00';
+    my $no_tz_str   = '1979-05-27T00:32:00.643144312';
+
+    my $data = from_toml( # use default parser, which produces strings for datetimes
+      $parser->encode(
+        $parser->decode(qq{
+with_tz = $with_tz_str
+no_tz   = $no_tz_str
+        })
+      )
+    );
+
+    is $data->{with_tz}, $with_tz_str, 'datetime with time zone reproduced faithfully';
+    is $data->{no_tz}, $no_tz_str, 'datetime without time zone reproduced faithfully';
+  }
 };
 
 done_testing;
