@@ -1,4 +1,7 @@
 {{$NEXT}}
+-Add support for floating time zones in TOML output (thanks ijackson)
+-Fix bug where datetimes were being outputed as ISO8601 instead of RFC3339
+-Clarified documentation with explicit description of supported perl types for each toml type
 
 0.06 2020-03-30
 -Performance improvements in TOML::Tiny::Tokenizer->next_token
